# polymorphix

./: .gitignore  docker-compose.yml
.claude/: settings.local.json
client/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx
client/src/components/: ProtectedRoute.tsx  ThemeToggle.tsx
client/src/contexts/: AuthContext.tsx  ThemeContext.tsx
client/src/lib/: api.ts
client/src/pages/: Auth.tsx  Home.tsx
server/: .dockerignore  .env.example  Dockerfile  __packages__.md  main.py  pyproject.toml
server/app/: config.py  database.py  dependencies.py
server/app/models/: __init__.py  auth.py  video.py
server/app/routes/: auth.py  videos.py
server/app/schemas/: auth.py  video.py
server/app/tasks/: celery_app.py
services/: config.py  rx.py  tx.py
