[project]
name = "server"
version = "0.1.0"
description = "Backend for the polymorphix"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.17.2",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt==5.0.0",
    "billiard==4.2.4",
    "boto3==1.42.14",
    "botocore==1.42.14",
    "cachetools==6.2.4",
    "celery==5.6.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "deprecation==2.1.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "fastapi==0.126.0",
    "ffmpeg-python==0.2.0",
    "fsspec==2025.12.0",
    "future==1.0.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jmespath==1.0.1",
    "kombu==5.6.1",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "minio==7.2.20",
    "mmh3==5.2.0",
    "multidict==6.7.0",
    "packaging==25.0",
    "passlib==1.7.4",
    "pika>=1.3.2",
    "pillow==12.0.0",
    "postgrest==2.27.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyiceberg==0.10.0",
    "pyjwt==2.10.1",
    "pyparsing==3.2.5",
    "pyroaring==1.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.21",
    "pyyaml==6.0.3",
    "realtime==2.27.0",
    "redis==7.1.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "rsa==4.9.1",
    "ruff==0.14.10",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "storage3==2.27.0",
    "strenum==0.4.15",
    "strictyaml==1.7.3",
    "supabase==2.27.0",
    "supabase-auth==2.27.0",
    "supabase-functions==2.27.0",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "urllib3==2.6.2",
    "uvicorn==0.38.0",
    "vine==5.1.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "yarl==1.22.0",
]
